// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders the H1 heading 1`] = `
{
  "activate": true,
  "attributes": {
    "title": "Heading 1",
  },
  "category": "Generic blocks",
  "content": "
    <mj-text font-size="2rem" line-height="1.15">
      Heading
    </mj-text>",
  "label": "H1",
  "media": "
<svg
  class="lucide lucide-heading-1"
  xmlns="http://www.w3.org/2000/svg"
  width="24"
  height="24"
  viewBox="0 0 24 24"
  fill="none"
  stroke="currentColor"
  stroke-width="2"
  stroke-linecap="round"
  stroke-linejoin="round"
>
  <path d="M4 12h8" />
  <path d="M4 18V6" />
  <path d="M12 18V6" />
  <path d="m17 12 3-2v8" />
</svg>
",
}
`;

exports[`renders the H2 heading 1`] = `
{
  "activate": true,
  "attributes": {
    "title": "Heading 2",
  },
  "category": "Generic blocks",
  "content": "
    <mj-text font-size="1.5rem" line-height="1.15">
      Heading
    </mj-text>",
  "label": "H2",
  "media": "
<svg
  class="lucide lucide-heading-2"
  xmlns="http://www.w3.org/2000/svg"
  width="24"
  height="24"
  viewBox="0 0 24 24"
  fill="none"
  stroke="currentColor"
  stroke-width="2"
  stroke-linecap="round"
  stroke-linejoin="round"
>
  <path d="M4 12h8" />
  <path d="M4 18V6" />
  <path d="M12 18V6" />
  <path d="M21 18h-4c0-4 4-3 4-6 0-1.5-2-2.5-4-1" />
</svg>
",
}
`;

exports[`renders the H3 heading 1`] = `
{
  "activate": true,
  "attributes": {
    "title": "Heading 3",
  },
  "category": "Generic blocks",
  "content": "
    <mj-text font-size="1.17rem" line-height="1.15">
      Heading
    </mj-text>",
  "label": "H3",
  "media": "
<svg
  class="lucide lucide-heading-3"
  xmlns="http://www.w3.org/2000/svg"
  width="24"
  height="24"
  viewBox="0 0 24 24"
  fill="none"
  stroke="currentColor"
  stroke-width="2"
  stroke-linecap="round"
  stroke-linejoin="round"
>
  <path d="M4 12h8" />
  <path d="M4 18V6" />
  <path d="M12 18V6" />
  <path d="M17.5 10.5c1.7-1 3.5 0 3.5 1.5a2 2 0 0 1-2 2" />
  <path d="M17 17.5c2 1.5 4 .3 4-1.5a2 2 0 0 0-2-2" />
</svg>
",
}
`;

exports[`renders the H4 heading 1`] = `
{
  "activate": true,
  "attributes": {
    "title": "Heading 4",
  },
  "category": "Generic blocks",
  "content": "
    <mj-text font-size="1rem" line-height="1.15">
      Heading
    </mj-text>",
  "label": "H4",
  "media": "
<svg
  class="lucide lucide-heading-4"
  xmlns="http://www.w3.org/2000/svg"
  width="24"
  height="24"
  viewBox="0 0 24 24"
  fill="none"
  stroke="currentColor"
  stroke-width="2"
  stroke-linecap="round"
  stroke-linejoin="round"
>
  <path d="M4 12h8" />
  <path d="M4 18V6" />
  <path d="M12 18V6" />
  <path d="M17 10v4h4" />
  <path d="M21 10v8" />
</svg>
",
}
`;

exports[`renders the H5 heading 1`] = `
{
  "activate": true,
  "attributes": {
    "title": "Heading 5",
  },
  "category": "Generic blocks",
  "content": "
    <mj-text font-size="0.83rem" line-height="1.15">
      Heading
    </mj-text>",
  "label": "H5",
  "media": "
<svg
  class="lucide lucide-heading-5"
  xmlns="http://www.w3.org/2000/svg"
  width="24"
  height="24"
  viewBox="0 0 24 24"
  fill="none"
  stroke="currentColor"
  stroke-width="2"
  stroke-linecap="round"
  stroke-linejoin="round"
>
  <path d="M4 12h8" />
  <path d="M4 18V6" />
  <path d="M12 18V6" />
  <path d="M17 13v-3h4" />
  <path d="M17 17.7c.4.2.8.3 1.3.3 1.5 0 2.7-1.1 2.7-2.5S19.8 13 18.3 13H17" />
</svg>
",
}
`;

exports[`renders the H6 heading 1`] = `
{
  "activate": true,
  "attributes": {
    "title": "Heading 6",
  },
  "category": "Generic blocks",
  "content": "
    <mj-text font-size="0.67rem" line-height="1.15">
      Heading
    </mj-text>",
  "label": "H6",
  "media": "
<svg
  class="lucide lucide-heading-6"
  xmlns="http://www.w3.org/2000/svg"
  width="24"
  height="24"
  viewBox="0 0 24 24"
  fill="none"
  stroke="currentColor"
  stroke-width="2"
  stroke-linecap="round"
  stroke-linejoin="round"
>
  <path d="M4 12h8" />
  <path d="M4 18V6" />
  <path d="M12 18V6" />
  <circle cx="19" cy="16" r="2" />
  <path d="M20 10c-2 2-3 3.5-3 6" />
</svg>
",
}
`;
